<resources>
    <string name="app_name">Proyecto_POI</string>
    <string name="hint_mail">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_comfirmPass">Confirmar contraseña</string>

    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_register">Registrarse</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_Apellidos">Apellidos</string>
    <string name="hint_phone">Teléfono</string>
    <string name="btn_next">Siguiente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_new_post">Crear publicación</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>